--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Just a happy bot :D",
   "main": "bot.js",
   "author": "Jad",
+  "scripts": {
+  	"start": "node bot.js"
+  },
   "dependencies": {
     "discord.io": "https://github.com/woor/discord.io/tarball/gateway_v6",
     "winston": "^3.0.0"
